--- a/docs/Packages/org.gatewaydev.legacymapeditor/meta/package.xml
+++ b/docs/Packages/org.gatewaydev.legacymapeditor/meta/package.xml
@@ -1,9 +1,9 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <Package>
     <DisplayName>Legacy Map Editor</DisplayName>
-    <Description>Legacy Map Editor application</Description>
-    <Version>1.0.0</Version> <!-- This version will increment with each update -->
-    <ReleaseDate>2024-10-04</ReleaseDate>
+    <Description>Legacy Map Editor by Gateway Development L.L.C.</Description>
+    <Version>1.0.0</Version>
+    <ReleaseDate>2024-01-01</ReleaseDate> <!-- You can update this date -->
     <Default>true</Default>
-    <Name>org.gatewaydev.legacymapeditor</Name>
+    <Script>installscript.qs</Script> <!-- Optional, only if you have a script -->
 </Package>
